--- a/views/template.ejs
+++ b/views/template.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full" data-theme="light">
+<html lang="ja" class="h-full" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paperless-AI Dashboard</title>
+    <title>文唱ドキュメントAI  Dashboard</title>
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/dashboard.css">
@@ -29,7 +29,7 @@
                     <li>
                         <a href="#" class="sidebar-link active">
                             <i class="fas fa-home"></i>
-                            <span>Dashboard</span>
+                            <span>管理画面</span>
                         </a>
                     </li>
                     <li>
@@ -53,7 +53,7 @@
                     <li>
                         <a href="#" class="sidebar-link">
                             <i class="fas fa-cog"></i>
-                            <span>Settings</span>
+                            <span>設定</span>
                         </a>
                     </li>
                 </ul>
