--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full" data-theme="light">
+<html lang="ja" class="h-full" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paperless-AI Dashboard</title>
+    <title>文唱ドキュメントAI  Dashboard</title>
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
     <link rel="stylesheet" href="css/dashboard.css">
@@ -33,43 +33,43 @@
                     <li>
                         <a href="/dashboard" class="sidebar-link">
                             <i class="fas fa-home"></i>
-                            <span>Dashboard</span>
+                            <span>管理画面</span>
                         </a>
                     </li>
                     <li>
                         <a href="/manual" class="sidebar-link">
                             <i class="fas fa-file-alt"></i>
-                            <span>Manual</span>
+                            <span>書類分析</span>
                         </a>
                     </li>
                     <li>
                         <a href="/chat" class="sidebar-link">
                             <i class="fa-solid fa-comment"></i>
-                            <span>Chat</span>
+                            <span>AI分析</span>
                         </a>
                     </li>
                     <li>
                         <a href="/playground" class="sidebar-link">
                             <i class="fa-solid fa-flask-vial"></i>
-                            <span>Playground</span>
+                            <span>β版</span>
                         </a>
                     </li>
                     <li>
                         <a href="/history" class="sidebar-link">
                             <i class="fa-solid fa-clock-rotate-left"></i>
-                            <span>History</span>
+                            <span>履歴</span>
                         </a>
                     </li>
                     <li>
                         <a href="/settings" class="sidebar-link active">
                             <i class="fas fa-cog"></i>
-                            <span>Settings</span>
+                            <span>設定</span>
                         </a>
                     </li>
                     <li>
                         <a href="/logout" class="sidebar-link">
                             <i class="fa-solid fa-right-from-bracket"></i>
-                            <span>Logout</span>
+                            <span>ログアウト</span>
                         </a>
                     </li>
                 </ul>
