--- a/views/history.ejs
+++ b/views/history.ejs
@@ -51,7 +51,7 @@
                 <div class="brand-icon">
                     <i class="fas fa-file-alt"></i>
                 </div>
-                <h1 class="brand-title">Paperless-AI<small style="display: block;"><%= version %></small></h1>
+                <h1 class="brand-title">文唱ドキュメントAI<small style="display: block;"><%= version %></small></h1>
             </div>
 
             <nav class="sidebar-nav">
